[package]
name = "mmr-nostr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nostr]
path = "../nostr/crates/nostr"

[dependencies.cloud-mmr]
path = "../cloud-mmr"

[dependencies]
env_logger = "0.10.0"
bitcoin_hashes = { version = "0.12", features = ["serde"] }
tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"] }
